package Modul_10;

public interface Learner {
    String getCourseGrade();
}
